[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-sitter = "0.4.2"
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
pdb = "0.8.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Environment",
    "Win32_System_WindowsProgramming",
]

[build-dependencies]
rust-sitter-tool = "0.4.2"